feat: add more detail

--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>This is a demo file</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi corrupti eaque quia, voluptatem rem sint architecto nobis mollitia saepe totam necessitatibus ab voluptates harum cum dolorem dolorum optio cumque consequuntur.</p>
 </body>
 </html>
